KNOWSEC-143: Add column filtering (not quite done)